# Specialization-Project-fall-2021

./: .gitignore  LICENSE  README.md  build_matrics_v1.py  contour_and_mesh_plotter.py  requirements.txt  setup.cfg
code_not_used_for_report/: check_stress_recovery.py  main_example_file_v1.py  old_reduced_order_error.py
code_not_used_in_rapport/: check_conv.py  check_stress_recovery.py  old_reduced_order_error.py  save_and_load_matrices_v1.py
code_note_used_in_rapport/: check_save_and_load_matrices_v1.py  check_stress_recovery.py  find_derivatives_xy.py  main_example_file_v1.py
code_use_for_rapport/: check_conv.py  check_displacement_plots.py  check_stress_recovery.py  displacement_plots.py  main_example_file_v1.py  mesh_plot.py  patch_displacement_plots.py  patch_test1_displacement_plots.py  plot_lagrange_basis_1D.py  reduced_order_error_check.py  reduced_order_error_rel_info_singular_values.py  time_code.py
code_use_for_rapport/Example_1_Patch_Test/: patch_test1.py  patch_test1_displacement_plots.py  patch_test1_run_log.txt
code_use_for_rapport/Example_2_Gravity_2D/: displacement_and_von_mises_plots.py  mesh_plot.py  reduced_order_error_rel_info_singular_values.py  (+1 more)
example_use/: build_matrics_v1.py  check_displacement_plots.py  check_mesh_plot.py  check_stress_recovery.py  main_example_file_v1.py  reduced_order_error_check.py  reduced_order_error_rel_info_singular_values.py
old_code/: find_derivatives_xy.py  gauss_labotto_points.py  linear_elasticity_2d_assembly_with_jac_v1.py  poisson_2d.py  xy_linear.py
tests/: patch_test.py  test_get_dirichlet_edge.py
(+210 files in other folders)
