[metadata]
name = Fordypningsprosjekt-host-2021
version = 0.0.2
author = Olav M. S. Gran
# for now, until June 2022, will be updated
author_email = omgran@stud.ntnu.no
description = Code for building a reduced order model for the linear elasticity equation on a square in 2D
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OlavMSG/Fordypningsprosjekt-host-2021
project_urls =
    Code = https://github.com/OlavMSG/Fordypningsprosjekt-host-2021
    Bug Tracker = https://github.com/OlavMSG/Fordypningsprosjekt-host-2021/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Mathematics
keywords =
    mathematics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1
    scipy>=1
    sympy>=1
    matplotlib>=3
    quadpy>=0.16.10

zip_safe = no

[options.packages.find]
where = src